Fixed the layout issues on IE11 which were not much tbh. I can now completely move off of Bootstrap!

--- a/css/lets-normalize.css
+++ b/css/lets-normalize.css
@@ -45,7 +45,8 @@ u{
 p {
   /* font-family: 'Josefin Sans', sans-serif; */
   font-family: 'Josefin Sans', 'Abel', 'Trebuchet', 'Verdana', 'Tahoma', 'Arial Narrow', 'Helvetica', 'Geneva', sans-serif;
-  font-size: 1em;
+  /* font-size: 1.03em; */
+  font-size: 17px;
   margin: 0px;
   color: #9e9e9e;
   line-height: 1.35;
@@ -75,8 +76,8 @@ h4{
 
 .inconsolata{
   /* font-family: 'Inconsolata', monospace; */
-  font-family: 'Courier', 'Courier New', 'Lucida Sans Typewriter', 'Lucida Console', 'Monaco', 'Andale Mono', monospace;
-  font-size: 0.8em;
+  font-family: 'Inconsolata', 'Courier', 'Courier New', 'Lucida Sans Typewriter', 'Lucida Console', 'Monaco', 'Andale Mono', monospace;
+  font-size: 0.9em;
   color: #9e9e9e;
   line-height: 1.5;
   padding: 5px 10px 5px 10px;
@@ -158,7 +159,6 @@ h4{
 
 .card-txt-format{
   color: #fff;
-  font-weight: bold;
   max-width: 50%;
   text-align: center;
   margin-top: 40px;
@@ -1063,7 +1063,7 @@ transform: scale(1.05);
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* width:100%; */
+  width:100%;
   min-height: 100vh;
   text-align: center;
   /* padding: 0px 21% 80px 21%; */
@@ -1293,45 +1293,33 @@ transform: scale(1.05);
   margin-right: 20px;
 }
 
-#services-section div i{
-  font-size: 55px;
-  position: relative;
-  margin-bottom: 60px;
-  margin-right: 5px;
-  margin-left: 5px;
-
-  background: linear-gradient(141deg, #BD3F32, #CB356B);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
 
 #services-section{
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
-#services-section div{
+/* #services-section div{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
-}
+ }  */
 
 
 #services-subsection{
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   justify-content: center;
-  max-width: 100%;
+  align-items: center;
+  width: 100%;
   position: relative;
   padding-top: 40px;
-  /* padding-bottom: 40px; */
   -webkit-transition: all 0.7s ease;
   transition: all 0.7s ease;
 }
@@ -1339,7 +1327,9 @@ transform: scale(1.05);
 #services-subsection .services-content{
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  align-items: center;
   width: 60%;
   text-align: left;
   margin-bottom: 40px;
@@ -1412,7 +1402,7 @@ transform: scale(1.05);
 
 #services-linux-p p{
   font-weight: 500;
-  /* width: 100%; */
+  width: 100%;
 }
 
 
